--- a/index8.html
+++ b/index8.html
@@ -1364,23 +1364,23 @@ footer.site-footer{
 
 
 
-
-/* ===== GLOBAL MOBILE TEXT ALIGN FIX ===== */
 @media (max-width: 780px) {
 
-  body {
-    text-align: center;
+  * {
+    text-align: center !important;
   }
 
-  p, h1, h2, h3, h4, h5, h6 {
-    max-width: 560px;
-    margin-left: auto;
-    margin-right: auto;
-    line-height: 1.7;
-    text-align: center;
+  p, span, li, div, h1, h2, h3, h4, h5, h6 {
+    max-width: 560px !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    line-height: 1.75 !important;
+    float: none !important;
+    transform: none !important;
   }
 
 }
+
 
   
 </style>
