--- a/index8.html
+++ b/index8.html
@@ -1342,29 +1342,28 @@ footer.site-footer{
 }
 
 
-/* ===== GLOBAL MOBILE TEXT FIX ===== */
+
+
+/* ===== MOBILE TEXT-ONLY ALIGN FIX (NO LAYOUT IMPACT) ===== */
 @media (max-width: 780px) {
 
-  body {
-    text-align: center;
-  }
-
+  p,
   h1, h2, h3, h4, h5, h6,
-  p, span, li, div {
-    max-width: 92%;
+  span,
+  li,
+  small,
+  strong,
+  em {
+    max-width: 560px;
     margin-left: auto !important;
     margin-right: auto !important;
     text-align: center !important;
     line-height: 1.7;
-    word-wrap: break-word;
   }
 
-  /* Fix flex/grid parents */
-  section, article, main, .container, .card {
-    display: block !important;
-    text-align: center;
-  }
 }
+
+  
 
 
 </style>
