--- a/index8.html
+++ b/index8.html
@@ -1343,27 +1343,20 @@ footer.site-footer{
 
 
 
-
-/* ===== MOBILE TEXT-ONLY ALIGN FIX (NO LAYOUT IMPACT) ===== */
+/* ===== MOBILE READABILITY FIX (TEXT ONLY) ===== */
 @media (max-width: 780px) {
 
-  p,
+  p, 
   h1, h2, h3, h4, h5, h6,
-  span,
-  li,
-  small,
-  strong,
-  em {
-    max-width: 560px;
-    margin-left: auto !important;
-    margin-right: auto !important;
-    text-align: center !important;
+  li, span, small {
+    padding-left: 16px;
+    padding-right: 16px;
+    box-sizing: border-box;
     line-height: 1.7;
   }
 
 }
 
-  
 
 
 </style>
