--- a/edu.html
+++ b/edu.html
@@ -128,6 +128,26 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 .lang-menu.open{
   display:block;
 }
+
+
+
+  /* ===== MOBILE TEXT READABILITY FIX ===== */
+@media (max-width: 900px) {
+
+  .section .text {
+    max-width: 680px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .section .text p,
+  .section .text h2 {
+    text-align: center;
+    line-height: 1.7;
+  }
+
+}
+  
 </style>
 
 </head>
