--- a/edu.html
+++ b/edu.html
@@ -26,6 +26,14 @@ body{
   line-height:1.7;
 }
 
+
+/* ===== GLOBAL TEXT ALIGNMENT ===== */
+p, h1, h2, h3, h4, h5, h6, li {
+  text-align: left;
+}
+
+  
+
 /* ================= HEADER ================= */
 header{
   background:var(--blue);
@@ -172,28 +180,31 @@ footer{
 .lang-menu a:hover{ background:#f2f2f2; }
 .lang-menu.open{ display:block; }
 
-/* ================= MOBILE ================= */
-@media(max-width:900px){
+@media (max-width:900px){
 
   .section{
     flex-direction:column !important;
-    text-align:center;
     padding:50px 20px;
   }
 
-  .text,
-  .section img{
+  .section img,
+  .text{
     width:100%;
   }
 
-  .text h2,
-  .text p{
-    text-align:center;
+  .text{
+    max-width:720px;
     margin-left:auto;
     margin-right:auto;
-    max-width:640px;
+  }
+
+  .text p,
+  .text h2{
+    text-align:left;
+    line-height:1.75;
   }
 }
+
 </style>
 
 
