--- a/index8.html
+++ b/index8.html
@@ -30,6 +30,12 @@ html,body{
   line-height:1.35;
 }
 
+/* ===== GLOBAL TEXT ALIGNMENT ===== */
+p, h1, h2, h3, h4, h5, h6, li {
+  text-align: left;
+}
+
+  
 /* Top utility nav */
 .top-nav {
   position:fixed;
