--- a/index8.html
+++ b/index8.html
@@ -540,16 +540,10 @@ footer.site-footer{
 }
 
 .serve-paragraph .line {
-  display:block;
-  margin:0 auto 12px auto;
+    display: block;
+    margin: 0 0 12px 0; /* top:0, right:0, bottom:12px, left:0 */
+    max-width: 100%;    /* optional, can remove if not needed */
 }
-
-/* Smooth 8-shape widths */
-.line1 { max-width:100%; }
-.line2 { max-width:75%; }
-.line3 { max-width:50%; }
-.line4 { max-width:75%; }
-.line5 { max-width:100%; }
 
 
 
