--- a/index8.html
+++ b/index8.html
@@ -533,17 +533,18 @@ footer.site-footer{
 
 
 .serve-paragraph {
-  font-size:18px;
-  color:#333;
-  line-height:1.8;
-  text-align:center; /* center text for trapezoid symmetry */
+    font-size: 18px;
+    color: #333;
+    line-height: 1.8;
+    text-align: left; /* align all text to the left */
 }
 
 .serve-paragraph .line {
     display: block;
-    margin: 0 0 12px 0; /* top:0, right:0, bottom:12px, left:0 */
-    max-width: 100%;    /* optional, can remove if not needed */
+    margin: 0 0 12px 0; /* spacing between lines */
+    max-width: 100%;
 }
+
 
 
 
