--- a/index8.html
+++ b/index8.html
@@ -31,8 +31,13 @@ html,body{
 }
 
 /* ===== GLOBAL TEXT ALIGNMENT ===== */
-p, h1, h2, h3, h4, h5, h6, li {
+p, h1, h3, h4, h5, h6, li {
   text-align: left;
+}
+
+/* Center all h2 headings */
+h2 {
+  text-align: center;
 }
 
   
