--- a/index8.html
+++ b/index8.html
@@ -1932,10 +1932,10 @@ footer.site-footer{
 
       WhatsApp: 
       <a href="https://wa.me/41765258145" target="_blank" style="color:#F5C22D;text-decoration:none;">
-        +41 76 525 81 45
+        +254701998225
       </a><br>
 
-      Phone: +41 76 525 81 45
+      Phone: +254701998225 
     </p>
 
     <div style="border-bottom:1px solid rgba(255,255,255,0.3);margin:25px 0;"></div>
