--- a/index8.html
+++ b/index8.html
@@ -829,17 +829,14 @@ footer.site-footer{
   border-radius: 80%;
 }
 
-.about-img.trapezium {
-  clip-path: polygon(10% 0, 90% 0, 100% 100%, 0 100%);
-}
 
 .about-img.round-diamond {
-  clip-path: polygon(
-    50% 0%, 85% 25%, 100% 50%,
-    85% 75%, 50% 100%, 15% 75%,
-    0% 50%, 15% 25%
-  );
-  border-radius: 20px;
+ border-radius: 37% 63% 66% 34% / 44% 38% 62% 56%;
+}
+  
+.about-img.trapezium {
+ border-radius:50% 20% 50% 20%;
+  box-shadow:0 6px 18px rgba(11,97,182,0.3);
 }
 
 
