--- a/index8.html
+++ b/index8.html
@@ -841,9 +841,29 @@ footer.site-footer{
  border-radius: 37% 63% 66% 34% / 44% 38% 62% 56%;
 }
 
+
+
 .about-img.blob {
   border-radius: 37% 63% 66% 34% / 44% 38% 62% 56%;
+  width: 100%;
+  height: auto; /* maintain aspect ratio */
+  transform-origin: center;
+  animation: growBlob 1.5s ease-out forwards;
 }
+
+@keyframes growBlob {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.5);
+  }
+}
+
+
+
+
+  
 
 /* ALTERNATE BLOCKS */
 .about-block.alt-left {
