--- a/index8.html
+++ b/index8.html
@@ -1398,8 +1398,7 @@ footer.site-footer{
   <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763476964/Screenshot_73_e5hyu9.png" alt="swisslogo" />
 
   <h1>
-    Swiss Aid<br> Connect<br>
-    Foundation
+    Swiss Aid <br>ConnectFoundation
   </h1>
 
   <!-- MENU BUTTON MOVED HERE -->
