--- a/index8.html
+++ b/index8.html
@@ -634,11 +634,11 @@ footer.site-footer{
   }
 
   .brand img {
-    height: 58px;       /* reduce logo size on phone */
+    height: 40px;       /* reduce logo size on phone */
   }
 
   .brand h1 {
-    font-size: 24px;
+    font-size: 20px;
     line-height: 1.1;
   }
 
@@ -1398,7 +1398,7 @@ footer.site-footer{
   <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763476964/Screenshot_73_e5hyu9.png" alt="swisslogo" />
 
   <h1>
-    Swiss Aid <br>Connect Foundation
+    Swiss Aid Connect<br> Foundation
   </h1>
 
   <!-- MENU BUTTON MOVED HERE -->
