--- a/index8.html
+++ b/index8.html
@@ -1440,7 +1440,7 @@ footer.site-footer{
   <section class="hero-wrap" aria-labelledby="hero-heading">
     <div class="hero-slider">
       <img src="https://images.pexels.com/photos/33127835/pexels-photo-33127835.jpeg" class="hero-slide slide1" alt="Slide 1">
-      <img src="https://images.pexels.com/photos/11025022/pexels-photo-11025022.jpeg" class="hero-slide slide3" alt="Slide 2">
+      <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766230599/ChatGPT_Image_Dec_20_2025_02_31_12_PM_ltuaaf.jpg" class="hero-slide slide3" alt="Slide 2">
       <img src="https://images.pexels.com/photos/1072824/pexels-photo-1072824.jpeg" class="hero-slide slide4" alt="Slide 3">
       <img src="https://images.pexels.com/photos/6590920/pexels-photo-6590920.jpeg" class="hero-slide slide5" alt="Slide 4">
       
@@ -1574,7 +1574,7 @@ footer.site-footer{
 
       <!-- Card 2 -->
       <div style="background:#fff;border-radius:6px;overflow:hidden;display:flex;flex-direction:column;">
-        <img src="https://cdn.pixabay.com/photo/2018/02/07/18/30/group-3137670_960_720.jpg" alt="" style="width:100%;display:block;">
+        <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766230599/ChatGPT_Image_Dec_20_2025_02_31_12_PM_ltuaaf.jpg" alt="" style="width:100%;display:block;">
         <a href="#" class="join-btn-blue" style="
           display:block;
           padding:20px;
