--- a/edu.html
+++ b/edu.html
@@ -314,6 +314,54 @@ footer{
   </div>
 </section>
 
+
+
+<!-- SECTION: Digital Inclusion & Innovation -->
+<section class="section center-section">
+  <img src="https://images.pexels.com/photos/693859/pexels-photo-693859.jpeg" class="shape-diagonal">
+  <div class="text">
+    <h2 data-key="s6-title">Digital Inclusion & Innovation</h2>
+
+    <ul>
+      <li data-key="s6-li1">ICT, coding, and robotics programs active across all six counties</li>
+      <li data-key="s6-li2">Digital literacy initiatives and technology hubs for youth</li>
+      <li data-key="s6-li3">Mentorship programs and online platforms for skill development</li>
+      <li data-key="s6-li4">Inclusion of youth with disabilities in all programs</li>
+      <li data-key="s6-li5">Promotes innovation, collaboration, and employability</li>
+    </ul>
+
+    <p data-key="s6-p1">
+      <strong>Impact:</strong> Youth gain equitable access to technology, mentorship, and digital resources, fostering innovation and preparing them for future opportunities.
+    </p>
+  </div>
+</section>
+
+
+<!-- SECTION: Life Skills & Education -->
+<section class="section center-section">
+  <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766230599/ChatGPT_Image_Dec_20_2025_02_31_12_PM_ltuaaf.jpg" class="shape-diagonal">
+  <div class="text">
+    <h2 data-key="s3-title">Life Skills & Education</h2>
+
+    <ul>
+      <li data-key="s3-li1">Decision-making, problem-solving, and civic engagement programs</li>
+      <li data-key="s3-li2">STEM initiatives, vocational training, and internships</li>
+      <li data-key="s3-li3">County-specific programs: Nakuru (sports & arts), Machakos (coding & leadership), Mombasa (volunteer projects)</li>
+      <li data-key="s3-li4">Hands-on workshops and mentorship opportunities</li>
+      <li data-key="s3-li5">Certification and skill recognition for participating youth</li>
+    </ul>
+
+    <p data-key="s3-p1">
+      <strong>Impact:</strong> Prepares youth with practical skills and life competencies, enhancing employability, civic responsibility, and personal development.
+    </p>
+  </div>
+</section>
+
+
+
+
+
+  
 <!-- SECTION 5 -->
 <section class="section center-section">
   <div class="text">
